--- a/JahjaMuratovicCVMobile.css
+++ b/JahjaMuratovicCVMobile.css
@@ -3,6 +3,9 @@ html * {
 }
 
 :root {
+    /* body */
+    --body-min-height-pct: 110%;
+
     /* .CVMain */
     /*--cv-main-max-width: 800px;*/
     --cv-main-width: 90%;
@@ -56,7 +59,7 @@ body {
     background-image: url(wall.jpg);
     background-size: cover;
     background-attachment: fixed;
-    min-height: 100%;
+    min-height: var(--body-min-height-pct);
 }
 
 .CVMain {
