--- a/JahjaMuratovicCVMobile.css
+++ b/JahjaMuratovicCVMobile.css
@@ -1,3 +1,27 @@
+@media (max-device-aspect-ratio: 3/4) {
+    :root{
+        --background-height: calc(100vw * 1.333 - 9%);
+    }
+}
+
+@media (max-device-aspect-ratio: 2/3) {
+    :root{
+        --background-height: calc(100vw * 1.5 - 9%);
+    }
+}
+
+@media (max-device-aspect-ratio: 10/16) {
+    :root{
+        --background-height: calc(100vw * 1.6 - 9%);
+    }
+}
+
+@media (max-device-aspect-ratio: 9/16) {
+    :root{
+        --background-height: calc(100vw * 1.778 - 9%);
+    }
+}
+
 html * {
     font-family: Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Georgia, serif;
 }
@@ -27,7 +51,6 @@ html * {
     /* .infoBr */
     --info-br-visibility: inherit;
 
-
     /* .infoIcon */
     --info-icon-width-height: 50px;
     --info-icon-margin: 16px;
@@ -50,16 +73,15 @@ html * {
     --button-cursor: pointer;
 
     /* .button */
-    --button-hover-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.1), 0 17px 50px 0 rgba(0,0,0,0.05);
+    --button-hover-box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.1), 0 17px 50px 0 rgba(0, 0, 0, 0.05);
     --button-hover-opacity: 1;
-
+    
 }
 
 body {
     background-image: url(wall.jpg);
     background-size: cover;
     background-attachment: fixed;
-    min-height: var(--body-min-height-pct);
 }
 
 .CVMain {
@@ -83,7 +105,7 @@ body {
     margin-top: auto;
     margin-bottom: auto;
     float: center;
-    width: var(--profile-image-width-height); 
+    width: var(--profile-image-width-height);
     height: var(--profile-image-width-height);
 }
 
